n8n-gke-autopilot/n8n/routing/n8n-route.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: n8n-route
  namespace: n8n
spec:
  parentRefs:
    - name: external-gateway
      namespace: gateway
  hostnames:
    - "n8n.kube.iliazlobin.com"
  rules:
    - matches:
        - path:
            value: /
      backendRefs:
        - name: n8n-service
          port: 5678
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
